# okapi

./: README.md  install.sh  main.py  pyproject.toml
external_confs/: extract_features_config.yaml  matching_config.yaml
external_confs/alg/iwildcam/: clip.yaml  fixmatch.yaml
external_confs/backbone/iw/: convnext.yaml  rn50.yaml
external_confs/backbone/pm/: convnext.yaml  resnet.yaml
external_confs/checkpointer/: cc.yaml  iwildcam.yaml  pm.yaml
external_confs/dm/: erm_no_aug.yaml
external_confs/dm/iwildcam/: clip.yaml  erm_aug.yaml  fixmatch.yaml  okapi.yaml
external_confs/dm/pm/: erm.yaml  fixmatch.yaml  okapi.yaml
external_confs/experiment/cc/: erm.yaml  okapi.yaml
external_confs/experiment/iwildcam/: erm_aug.yaml  erm_aug_rn.yaml  erm_aug_wilds.yaml  erm_no_aug.yaml  fixmatch.yaml  fixmatch_wilds.yaml  okapi.yaml  okapi_off.yaml  okapi_rn.yaml
external_confs/experiment/pm/: erm.yaml  erm_no_aug.yaml  fixmatch.yaml  okapi.yaml  okapi_off.yaml  okapi_rn.yaml  rp_on_no_caliper.yaml
external_confs/experiment/pm/ablation/: okapi_no_calipers.yaml  okapi_no_fixed_caliper.yaml  okapi_no_std_caliper.yaml  okapi_oe_queries.yaml
external_confs/hydra/launcher/: slurm_goedel.yaml  slurm_kyiv.yaml
external_confs/logger/: ds.yaml
external_confs/model/seer/: regnet10B.yaml  regnet256Gf.yaml
hydra_plugins/: ds_plugin.py
src/: conf.py  samplers.py  schedulers.py  search.py  transforms.py  types.py
src/algorithms/: base.py  erm.py  mean_teacher.py
src/algorithms/self_supervised/: loss.py  moco.py
src/algorithms/semi_supervised/: __init__.py  base.py  fixmatch.py
src/algorithms/semi_supervised/okapi/: __init__.py  artifact.py  evaluation.py  loss.py  matching.py  offline.py  online.py
src/data/: __init__.py  grouper.py  utils.py  wrappers.py
src/data/datamodules/: __init__.py  base.py  camelyon17.py  civil_comments.py  fmow.py  global_wheat.py  iwildcam.py  poverty_map.py
src/models/: artifact.py  base.py
src/models/backbones/: __init__.py  text.py  vision.py
src/models/meta/: detection.py  ft.py
src/models/predictors/: __init__.py  fcn.py  identity.py
src/relays/: base.py
